--- a/gb/24/12/30/n14402049.md
+++ b/gb/24/12/30/n14402049.md
@@ -4,44 +4,40 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>油管巨星MrBeast多伦多片场发生工伤事故</h2>
 <h6></h6>
 <hr>
-<p>【大纪元2024年12月31日讯】（大纪元记者季薇多伦多报导）安省劳工厅正在调查《野兽游戏》（<em>Beast Games</em>）多伦多片场的一起工伤事故。这是由YouTube明星MrBeast制作、近期在Prime Video首播的新节目。</p>
+<p>【大纪元2024年12月31日讯】（大纪元记者季薇多伦多报导）安省劳工厅正在调查《野兽游戏》（Beast Games）多伦多片场的一起工伤事故。这是由油管（YouTube）明星MrBeast制作、近期在Prime Video首播的新节目。</p>
 <p>事故发生在9月11日，一名工人在拆除片场模型村时被倒塌的木材砸伤。事故地点位于多伦多的前唐斯维机场（Downsview Airport）。劳工厅未透露受伤工人的具体情况，仅表示已向片场雇主Blink 49 Studios和Manhattan Beach Studios发出“要求”（Requirement）。</p>
 <p>Prime Video及两家公司均未回应置评请求。多伦多警方虽然到场处理，但认为该事件不涉及刑事案件，因此未展开调查。</p>
 <p>《野兽游戏》是YouTube巨星吉米?唐纳森（Jimmy Donaldson）的最新作品。他的YouTube频道“MrBeast”拥有3.4亿订阅者，是全球订阅量最高的频道。这位26岁的堪萨斯州网红以大胆创意的特技视频以及向他人捐赠数十万美元的慈善举动而闻名。</p>
-<p>据《滚石》（<em>Rolling Stone</em>）杂志上周的报道，事发时，一块6英尺×6英尺的木材从布景塔外坠落，砸中了正在作业的工人，导致其受伤。不过，安省劳工厅尚未证实这些细节。</p>
+<p>据《滚石》（Rolling Stone）杂志上周的报导，事发时，一块6英尺×6英尺的木材从布景塔外坠落，砸中了正在作业的工人，导致其受伤。不过，安省劳工厅尚未证实这些细节。</p>
 <p>责任编辑：岳怡</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14395987.md#1">安省和魁省注册会计师协会 脱离加拿大协会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396539.md#1">安省省长福特扮圣诞老人 发圣诞节致辞视频</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396555.md#1">安省注册幼儿教育工作者比例下降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398704.md#1">安省游乐宫科学中心迟至2029年开放</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401235.md#1">安省食物银行预计使用率明年将继续上升</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14401028.md#1">多伦多人爱抱怨？2024年全球排名回答你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14401023.md#1">社区筹款九千 助宾顿市华裔店主走出被盗困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398694.md#1">节礼日多伦多现购物潮 小商家：难抵全年损失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396714.md#1">美国女孩自曝前世死因：飞机撞击帝国大厦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398541.md#1">一个台北女生在中国鞋厂工作的回忆录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的 维吉尼亚 有圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761555.md#1">宗泽宗爷爷：大宋的铁血老将</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399669.md#1">【菁英论坛】神韵欧洲大热 展现非凡生命力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400586.md#1">【时事金扫描】莫桑比克排华潮 华人商铺被洗劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399672.md#1">【新闻大破解】中共攻台有三线掩护 全球反统战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396399.md#1">父亲为养家卖掉爱车 41年后儿子给他惊喜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392440.md#1">Costco环球游轮之旅的价格为何令人瞠目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400174.md#1">阿塞拜疆航空客机坠毁 普京发声道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400231.md#1">“口红效应”不再 中国2024年电影票房大跌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399927.md#1">赵露思瘫软坐轮椅送医 工作室回应 已住院10天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400284.md#1">2024世界最美脸孔揭晓 韩星朴彩英首次跻身前十</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400144.md#1">《音速小子3》影评：蛋头博士能否洗白 成趣味悬念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399104.md#1">Golden Child与Rocket Punch合约到期不续约</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400671.md#1">惊人研究：单一茶包可释放数亿颗塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400184.md#1">厨房必备珍宝“食盐”妙用多 别再花冤枉钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392749.md#1">你的大脑天生就喜欢诚实：说谎会使人得病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391656.md#1">化解亲子冲突不用委屈自己！这样沟通最有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399098.md#1">花10分钟做这件事 你的玫瑰在冬天会更坚强</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/30/n14402049.htm">油管巨星MrBeast多伦多片场发生工伤事故</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/30/n14402049.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
